app/assets/stylesheets/components/_chat-header.scss
@import "govuk/components/header/header";
@import "mixins";

.app-c-header {
  .govuk-header__link--homepage {
    display: inline;
    border-bottom: 3px solid transparent;

    &:hover {
      margin-bottom: 0;
      border-bottom: 3px solid govuk-colour("white");
    }
  }

  .govuk-header__navigation-list {
    @include govuk-media-query($until: tablet) {
      margin-top: govuk-spacing(4);
    }
  }

  .govuk-header__navigation-item {
    border-bottom: none;
    display: inline-block;
    margin-right: govuk-spacing(5);

    &:last-of-type {
      margin-right: 0;
    }

    .govuk-header__link {
      font-size: 16px; // directly set the font size to prevent govuk-font mixins from reducing it on smaller screens
    }
  }

  .js-enabled & .govuk-header__navigation-item {
    display: block;
    margin-top: govuk-spacing(1);

    // This is a bit of a hack to add the header divider line and it's very brittle - it will break if
    // we wanted to add additional navigation links above the link and it will need updating any time
    // there's a change to the number of navigation links. We'll want to revisit this at a later date
    // to make the addition of the divider line more flexible.
    &:nth-child(3) {
      border-top: 1px solid govuk-colour("mid-grey");
      padding-top: govuk-spacing(4);
      margin: govuk-spacing(4) 0 0;

      @include govuk-media-query($until: tablet) {
        margin-top: govuk-spacing(2);
      }
    }

    @include govuk-media-query($until: tablet) {
      &:first-of-type {
        margin-top: govuk-spacing(2);
      }
    }

    &:last-of-type {
      margin-bottom: govuk-spacing(2);
    }
  }

  .govuk-header__navigation--end {
    text-align: left;
    margin-bottom: govuk-spacing(1);

    @include govuk-media-query($until: tablet) {
      margin-top: govuk-spacing(2);
    }
  }

  .govuk-js-header-toggle {
    margin-top: govuk-spacing(1);
    @include govuk-typography-weight-bold($important: false);
    font-size: 16px; // directly set the font size to prevent govuk-font mixins from reducing it on smaller screens
    border-bottom: 3px solid transparent;
    padding: 7px govuk-spacing(1) govuk-spacing(2);
    top: govuk-spacing(2);

    // removes the default chevron
    &::after {
      content: none;
    }

    &::before {
      @include chevron(govuk-colour("white"), false);
    }

    &:focus {
      background-color: govuk-colour("black");
      color: govuk-colour("white");
      box-shadow: none;
    }

    &:focus-visible {
      background-color: $govuk-focus-colour;
      color: govuk-colour("black");
      outline: none;
    }

    &:focus-visible::before {
      @include chevron(govuk-colour("black"), false);
    }

    &:hover {
      text-decoration: none;
      border-bottom: 3px solid govuk-colour("white");
    }
  }

  .app-c-header__menu-button--expanded {
    border-bottom: 3px solid govuk-colour("white");

    &::before, &:focus-visible::before {
      @include prefixed-transform($rotate: 225deg, $translateY: 1px);
    }
  }
}

.app-c-header-row {
  margin-top: govuk-spacing(1);
}

.app-c-header__link {
  @include govuk-media-query($until: 500px) {
    &::after {
      content: "\a";
      white-space: pre;
    }
  }
}

.app-c-header__container {
  border-bottom: govuk-spacing(2) solid govuk-colour("yellow");

  @include govuk-media-query($from: tablet, $until: desktop) {
    padding-bottom: govuk-spacing(2);
  }

  @include govuk-media-query($until: tablet) {
    padding-bottom: govuk-spacing(1);
  }
}

.app-c-header__link--homepage {
  vertical-align: middle;
}

.app-c-header__logotype {
  top: -5px;
  vertical-align: middle;
}

.app-c-header__product-name {
  font-size: 30px; // there currently isn't a mixin that produces a 30px font size
  font-weight: normal;
}

.app-c-header__tag-and-button-container {
  display: inline-block;

  @include govuk-media-query($until: 380px) {
    width: 100%;
  }

  @include govuk-media-query($until: tablet) {
    margin-top: govuk-spacing(2);
  }
}

.js-enabled .app-c-header__tag-and-button-container {
  @include govuk-media-query($until: 380px) {
    width: auto;
  }
}

.app-c-header__tag-and-button-container--flex-until-tablet {
  @include govuk-media-query($until: tablet) {
    align-items: center;
    display: flex;
    justify-content: space-between;
    width: 100%;
  }
}

.app-c-header__tag {
  background-color: govuk-tint(govuk-colour("yellow"), 75%);
  color: govuk-colour("black");
  text-transform: capitalize;
  letter-spacing: 0;
  padding: govuk-spacing(1) govuk-spacing(2) 7px;
  margin-left: govuk-spacing(1);
  display: inline-block;
  vertical-align: middle;
  @include govuk-font($size: 19, $weight: regular);

  @include govuk-media-query($until: tablet) {
    margin-left: 0;
    padding: 2px 8px 3px;
  }
}

.app-c-header__button {
  font-size: 16px; // directly set the font size to prevent govuk-font mixins from reducing it on smaller screens
  background: none;
  color: govuk-colour("white");
  border: none;
  padding: 0;

  @include govuk-typography-common;
  @include govuk-typography-weight-bold($important: false);

  &:hover {
    text-decoration: underline;
    text-decoration-thickness: 3px;
    cursor: pointer;
  }

  &:focus {
    background-color: $govuk-focus-colour;
    color: govuk-colour("black");
    outline: none;
  }

  &:focus:hover {
    text-decoration: none;
  }
}

.app-c-header__clear-chat {
  display: block;
  bottom: govuk-spacing(2);
  color: govuk-colour("white");
  right: 0;
  @include govuk-font(16, $weight: "bold", $tabular: false, $line-height: false);
  @include govuk-link-common;
  @include govuk-link-style-no-underline;

  @include govuk-media-query($until: 380px) {
    float: right;
  }

  @include govuk-media-query($from: 380px) {
    position: absolute;
    top: govuk-spacing(4);
  }

  @include govuk-media-query($from: tablet) {
    margin: govuk-spacing(1) 0 0;
    padding: 7px 5px 10px;
    position: absolute;
    top: govuk-spacing(2);
  }
}

.js-enabled .app-c-header__clear-chat {
  @include govuk-media-query($from: 380px) {
    position: static;
  }

  @include govuk-media-query($from: tablet) {
    position: absolute;
    right: calc(govuk-spacing(2) + 80px); // `.govuk-header__menu-button` menu button width and 10px padding
  }
}

.app-c-header__clear-chat--focusable-only {
  @include govuk-visually-hidden-focusable;
}

